# langdon-gui

./: .gitignore  pyproject.toml
docker/: Dockerfile.langdongui.backend  Dockerfile.langdongui.frontend  docker-compose.yml  nginx.conf  pyproject.docker.toml
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/adapters/: domains.ts  ipAddresses.ts  overview.ts  promissingFindings.ts  technologies.ts  usedPorts.ts  webDirectories.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/content/: page.tsx
frontend/src/contexts/: WebDirectoryScreenshotContext.ts  toastContext.ts
frontend/src/providers/: ToastProvider.tsx
frontend/src/types/: api.ts
frontend/src/utils/: ipAddresses.ts  webDirectories.ts
src/langdon_gui/: app.py  constants.py
src/langdon_gui/repositories/: android_apps.py  domains.py  http_cookies.py  http_headers.py  ip_addresses.py  technologies.py  used_ports.py  vulnerabilities.py  web_directories.py  web_directories_screenshots.py
src/langdon_gui/schemas/: domain_detail.py  domain_item.py  http_cookie_item.py  http_header_item.py  ip_address_item.py  ip_address_schema.py  list_response.py  promising_findings_response.py  promissing_finding.py  promissing_findings_paginated.py  promissing_findings_rates.py  technology_detail.py  technology_item.py  total_promissing_findings_count.py  used_port_detail.py  used_port_item.py  web_directory_detail.py  web_directory_schema.py
src/langdon_gui/services/: promissing_findings_manager.py
(+36 files in other folders)
